# landmark_classification_and_tagging

./: .gitignore  app.ipynb  cnn_from_scratch.ipynb  pyproject.toml  transfer_learning.ipynb
src/: data.py  model.py  optimization.py  predictor.py  train.py  transfer.py
