[tool.poetry]
name = "landmark-classification-and-tagging"
version = "0.1.0"
description = "CNN-based classification and tagging app for landmarks in social media images."
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
readme = "README.md"
packages = [{include = "landmark_classification_and_tagging"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python-headless = "4.5.3.56"
matplotlib = "3.4.3"
numpy = "1.21.2"
pillow = "7.0.0"
bokeh = "2.1.1"
torch = "1.9.0"
torchvision = "0.10.0"
tqdm = "4.63.0"
ipywidgets = "7.6.5"
livelossplot = "0.5.4"
pytest = "7.1.1"
pandas = "1.3.5"
seaborn = "0.11.2"
jupyterlab = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
